Project

General

Profile

Actions

Bug #36766

closed

InvalidRead in notify_osdmap

Added by Sage Weil over 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

  <threadname>ms_dispatch</threadname>
  <kind>InvalidRead</kind>
  <what>Invalid read of size 8</what>
  <stack>
    <frame>
      <ip>0x102D21D0</ip>
      <obj>/usr/lib64/libstdc++.so.6.0.19</obj>
      <fn>std::_Rb_tree_increment(std::_Rb_tree_node_base*)</fn>
    </frame>
    <frame>
      <ip>0x1F350D</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>operator++</fn>
      <dir>/opt/rh/devtoolset-7/root/usr/include/c++/7/bits</dir>
      <file>stl_tree.h</file>
      <line>287</line>
    </frame>
    <frame>
      <ip>0x1F350D</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>PGMap::deleted_pool(long)</fn>
      <dir>/usr/src/debug/ceph-14.0.1-743-g5481af7/src/mon</dir>
      <file>PGMap.h</file>
      <line>308</line>
    </frame>
    <frame>
      <ip>0x1D9F37</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>PGMap::apply_incremental(CephContext*, PGMap::Incremental const&amp;)</fn>
      <dir>/usr/src/debug/ceph-14.0.1-743-g5481af7/src/mon</dir>
      <file>PGMap.cc</file>
      <line>1218</line>
    </frame>
    <frame>
      <ip>0x2320FB</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>ClusterState::notify_osdmap(OSDMap const&amp;)</fn>
      <dir>/usr/src/debug/ceph-14.0.1-743-g5481af7/src/mgr</dir>
      <file>ClusterState.cc</file>
      <line>171</line>
    </frame>
    <frame>
      <ip>0x27BAEE</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>operator()</fn>
      <dir>/usr/src/debug/ceph-14.0.1-743-g5481af7/src/mgr</dir>
      <file>Mgr.cc</file>
      <line>474</line>
    </frame>
    <frame>
      <ip>0x27BAEE</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>with_osdmap&lt;Mgr::handle_osd_map()::&lt;lambda(const OSDMap&amp;)&gt; &gt;</fn>
      <dir>/usr/src/debug/ceph-14.0.1-743-g5481af7/src/osdc</dir>
      <file>Objecter.h</file>
      <line>2057</line>
    </frame>
    <frame>
      <ip>0x27BAEE</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>Mgr::handle_osd_map()</fn>
      <dir>/usr/src/debug/ceph-14.0.1-743-g5481af7/src/mgr</dir>
      <file>Mgr.cc</file>
      <line>422</line>

/a/sage-2018-11-10_20:11:37-rados:verify-wip-sage2-testing-2018-11-09-1636-distro-basic-smithi/3245888

Related issues 2 (0 open2 closed)

Copied to mgr - Backport #37344: mimic: InvalidRead in notify_osdmapRejectedActions
Copied to mgr - Backport #37345: luminous: InvalidRead in notify_osdmapRejectedActions
Actions #1

Updated by Sage Weil over 5 years ago

  • Status changed from In Progress to 7

Looks like we aren't locking PGMap for notify_osdmap

https://github.com/ceph/ceph/pull/25052

Actions #2

Updated by Sage Weil over 5 years ago

  • Backport set to mimic,luminous
Actions #3

Updated by Sage Weil over 5 years ago

  • Status changed from 7 to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

Actions #5

Updated by Nathan Cutler over 5 years ago

Actions #6

Updated by Sebastian Wagner over 4 years ago

  • Pull request ID set to 25052
Actions #7

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF