mgr: lock pg_map too for osd_pool_stats and notify_osdmap

Fixes: http://tracker.ceph.com/issues/36766
Signed-off-by: Sage Weil <sage@redhat.com>